# osdbkg

./: CMakeLists.txt  README.ID.MD  README.MD
android/: build.gradle.kts  settings.gradle  settings.gradle.kts
android/app/: build.gradle
android/app/src/androidTest/java/id/psw/osdbkg/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/id/psw/osdbkg/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
android/osdbkg/: build.gradle.kts
android/osdbkg/src/main/: AndroidManifest.xml
android/osdbkg/src/main/java/id/psw/osdbkg/: GLESActivity.kt  LibOsdBkg.kt  OsdBkgApp.kt  OsdBkgSurfaceView.kt  OsdBkgWallpaperService.kt  WPChooseActivity.kt
android/osdbkg/src/main/res/drawable/: ic_launcher_background.xml
android/osdbkg/src/main/res/drawable-v24/: ic_launcher_foreground.xml
android/osdbkg/src/main/res/values/: strings.xml
android/osdbkg/src/main/res/values-in/: strings.xml
android/osdbkg/src/main/res/values-ja/: strings.xml
android/osdbkg/src/main/res/xml/: gleslwp.xml
buildtools/: GENRES.CSX
platform/android/: ANDROID.CPP
platform/desktop/: MAIN.CPP
src/: BKGROUND.CPP  CRYSTAL.CPP  ENTRY.CPP  HELPER.CPP  LIGHTS.CPP  LOG.CPP  OGLX.CPP  OSDBKG.HPP  STATES.CPP  TYPES.HPP
src/res/: LINE.FRAG  LINE.VERT  MAIN.FRAG  MAIN.VERT  MODELS.blend  MODELS.mtl  R.CPP  R.HPP  TEXIMAGE.PDN  TEXIMAGE.TEX
